<resources>
    <string name="app_name">Notes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="star_list">StarList</string>
    <string name="note_list">NoteList</string>
    <string name="new_notes">NewNote</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <!-- Strings related to login -->
    <string name="alert_enter_name">Enter a user name</string>
    <string name="alert_email_not_valid">Enter a valid email address</string>
    <string name="alert_password_error">Password must be 6 to 21 characters </string>

    <string name="alert_password_length_error">Password should contain minimum of 6 characters and maximum of 20 characters</string>
    <string name="alert_password_digits_error">Password should contain at least one number</string>
    <string name="alert_password_lowercase_error">Password should contain at least one character</string>
    <string name="alert_password_uppercase_error">Password should contain at least one uppercase character</string>
    <string name="alert_password_specials_error">Password should contain at least one special character</string>

    <string name="alert_password_mismatch">Password do not match</string>

    <string name="creating_account">Creating Account...</string>
    <string name="email_already_exists">Email Already Exists</string>
    <string name="sign_on_success">Create a count successfully</string>
    <string name="login_failed">Incorrect username or password</string>
    <string name="login_success">Login success</string>
    <string name="authenticating">Authenticating...</string>

    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="sign_on">Sign On</string>
    <string name="not_a_member">Not a member?</string>
    <string name="already_registered">Already registered?</string>
    <string name="title_activity_notes_list">NotesListActivity</string>

    <string name="logout">LogOut</string>
    <string name="search">Search</string>
    <string name="app_sign_in">Sign In</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="description">Description</string>
    <string name="note_hint">1. Click a note to view and edit \n 2. Swipe left/right to delete a note</string>
    <string name="add_note">Add Note</string>
    <string name="edit_note">Edit Note</string>
    <string name="done">Done</string>

    <!-- Dropbox API Key-->
    <string name="app_key">db-3672vr0mw4vv4j5</string>
    <string name="app_secret">44xh0rnna9o4kmk</string>
    <string name="access_token">HlTbHzbE8hwAAAAAAAAG5Y321XmuNMDpjY_P7aNNfjbitVKB-Ck0wBY3t6Cife08</string>

</resources>
